<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_city"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/menu_city" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_switch_role"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/menu_switch_role" />
    </group>

    <item android:title="Más">
        <menu>
            <item
                android:id="@+id/nav_support"
                android:icon="@android:drawable/ic_menu_call"
                android:title="@string/menu_support" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/menu_help" />
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
